# Hello-CMake

./: CMakeLists.txt  CTestConfig.cmake  HelloWorld.cpp
